--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "Config": [
       {
         "interval": 4,
-        "backup": "unity",
+        "backup": "applovin",
         "status": true,
         "link": "https://google.com/",
         "contact": "https://google.com/",
@@ -23,9 +23,9 @@
         "unity_inter": "Interstitial_Android",
         
         
-        "applovin_banner": "unitid",
-        "applovin_inter": "unitid",
-        "applovin_native": "unitid",
+        "applovin_banner": "7a5822a2c18b8af0",
+        "applovin_inter": "75171ab3f66098c0",
+        "applovin_native": "8419211333058218",
         
         "ironsource_banner": "1215fccad",
         "ironsource_inter": "1215fccad"
